Issue #27025424: Ensure restaurant names show over logos on mobile

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -997,3 +997,13 @@ ul li a:hover::after {
     line-height: 36px;
   }
 }
+
+@media (pointer: coarse) {
+  .restaurant__image {
+    filter: none;
+  }
+  .restaurant__title {
+    transform: translateY(-80px);
+    overflow: visible;
+  }
+}
